# sandbox_pytorch

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  environment.yml  requirements-dev.txt  requirements.txt  setup.cfg
books/: 2023-07-29_diffusers.ipynb
scripts/: 01_start_uvicorn.sh
src/: server.py
