[metadata]
name = sandbox_pytorch
version = 0.0.0

[options]
packages = find:
install_requires =
    numpy
    fastapi
    uvicorn
    mypy
    torch
    torchvision
    torchaudio

[options.extras_require]
dev =
    ipython
    ipdb
    black
    isort
    flake8
    pre-commit
    pytest
    coverage
    ipykernel
    jupyterlab
    jupyterlab-code-formatter

[flake8]
max-line-length = 88
