[metadata]
name = sandbox_pytorch
version = 0.0.0

[options]
packages = find:
install_requires =
    numpy
    fastapi
    uvicorn
    mypy
    torch
    torchvision
    torchaudio
    diffusers[torch]
    transformers

[options.extras_require]
dev =
    ipython
    ipdb
    black
    isort
    flake8
    pre-commit
    pytest
    coverage
    ipykernel
    ipywidgets
    jupyterlab
    jupyterlab-code-formatter
    IProgress
    pqdm



[flake8]
max-line-length = 88
